<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        <com.google.android.material.card.MaterialCardView-->
        <!--            android:id="@+id/row_cardView"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:layout_marginBottom="8dp"-->
        <!--            app:cardCornerRadius="25dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:strokeColor="@color/red"-->
        <!--            app:strokeWidth="1dp">-->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/textViewPlug"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sugar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/textViewPlug"
                app:layout_constraintStart_toEndOf="@+id/sugar_textViewLabel"
                app:layout_constraintTop_toTopOf="@+id/sugar_textViewLabel" />

            <TextView
                android:id="@+id/insulin_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/textViewPlug"
                app:layout_constraintStart_toEndOf="@+id/insulin_textViewLabel"
                app:layout_constraintTop_toTopOf="@+id/insulin_textViewLabel" />

            <TextView
                android:id="@+id/sugar_textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/itemSugar"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/data_textView"
                app:layout_constraintTop_toBottomOf="@+id/data_textView" />

            <TextView
                android:id="@+id/insulin_textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/itemInsulin"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sugar_textViewLabel"
                app:layout_constraintTop_toBottomOf="@+id/sugar_textViewLabel" />

            <TextView
                android:id="@+id/note_textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginTop="48dp"
                android:text="@string/itemNote"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/note_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/textViewPlug"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/note_textViewLabel"
                app:layout_constraintTop_toBottomOf="@+id/note_textViewLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        </com.google.android.material.card.MaterialCardView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>